minikube-local/k8s-local/infras-cli/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infras-cli
  labels:
    name: infras-cli
    managed-by: kubectl
