minikube-local/k8s-local/infras-cli/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infras-cli
  namespace: infras-cli
  labels:
    app: infras-cli
spec:
  type: ClusterIP
  selector:
    app: infras-cli
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: 9090
      protocol: TCP
